# MatXtractt

./: .gitignore  CMakeLists.txt  Makefile  MatXtract_IEEE_RTX5060_v2.docx  MatXtract_Tarun_Malepati_Final.pptx  README.md  build.sh  duse.sh  example  feature_result.csv  fix_predict.ps1  optimization_results_fp16_dasp.csv  preprocess.sh  results.csv  run116.sh  runtest.sh  test.cu
ML/: ML_data_fp16.csv  ML_data_fp64.csv  batch_bayes_opt.py  batch_bayes_output.csv  bayes_opt.py  best_model.joblib  extract_csv.py  extract_features.cpp  final_test_predictions.csv  load_and_predict_and_run_spmv.py  load_and_predict_test.py  ml_install.sh  new_data.csv  optimization_results_fp16.csv  optimization_results_fp16_dasp.csv  optimization_results_fp64.csv  optimization_results_fp64_dasp.csv  optimization_results_fp64_large.csv  optimization_results_fp64_large_new.csv  run_bayes_5060.py  train_and_save_model.py  train_and_test.py
baselines/CSR5_cuda/: spmv
build-5060/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-baseline/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-sm120/: CMakeCache.txt  Makefile  cmake_install.cmake
data/: download.sh  download_suitsparse.py  prepare_data.sh  unzip.sh
example/: run_sample.sh
include/: MatXtract.h  TCSpMV.h  common.h  csr2csc.h  fuse_kernel.h  mmio.h  ptb_impl_fp16.h  ptb_impl_fp64.h
results/: bayes_summary.csv  benchmark_results_5060.csv  comparison_5060.csv
script/: 111.sh  all_cuda_perf.sh  all_cuda_perf_fp16.sh  all_cuda_perf_fp64.sh  compare_builds.py  du.sh  duorse.sh  duse.sh  duse_n.sh  gpu_info  gpu_info.cpp  max_mean.py  plot_5060.py  preprocess.sh  run_analyze.sh  run_benchmark_5060.py  run_perf.sh  run_pit.sh  run_pit1.sh  run_print.sh  square_ratio.sh
script/res/: du_fp16.csv  du_large_fp16_new.csv  du_large_fp64.csv  du_large_fp64_new.csv  results_all_cd_fp16_12_8_pre.csv  results_all_cd_fp16_2048npb.csv  results_all_cd_fp16_512npb.csv  results_all_cd_fp16_final.csv  results_all_cd_fp64.csv  results_all_cd_fp64_12_8.csv  results_all_cd_fp64_12_8_pre.csv  results_all_cd_fp64_new.csv  se.csv  se_fp16.csv  square_ratio.csv
src/spmv_kernel/: cdSpMV.cu  cdSpMV_fp64.cu  du_tcSpMV_fp16.cu  du_tcSpMV_fp16_v2.cu  du_tcSpMV_fp64.cu  du_tcSpMV_half.cu  necSpMV_fp64.cu  one_kernel.cu  se_tcSpMV_fp16.cu  se_tcSpMV_fp16_our.cu  se_tcSpMV_fp64.cu  tcSpMV.cu  tcSpMV_d.cu  tcSpMV_fp16.cu  tcSpMV_fp64.cu  tcSpMV_fp64_.cu
test/: analyze.cpp  dpc.cpp  draft.cpp  pit1axe.cpp  pit2axes.cpp  tc_kernel.cpp  tc_kernel_fp64.cpp  tc_preprocess.cpp  tckernel.cpp  tcpreprocess.cpp  test_autotc_spmv.cpp  test_cdspmv.cpp  test_spmv.cpp  test_tcspmv.cpp
utilities/: csr2csc.cpp  mmio.cpp
