cmake_minimum_required(VERSION 3.18)
project(MatXtractProj CXX C CUDA)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CUDA_STANDARD 17)
set(CMAKE_CUDA_ARCHITECTURES 120)
set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_compile_options($<$<COMPILE_LANGUAGE:CXX>:/Zc:preprocessor>)

if(POLICY CMP0077)
    cmake_policy(SET CMP0077 NEW)
endif()
if(POLICY CMP0146)
    cmake_policy(SET CMP0146 NEW)
endif()

option(ENABLE_CUDA_MEMCHECK "Enable cuda-memcheck support" OFF)
option(USE_FP64 "Enable fp64 support" ON)

if(ENABLE_CUDA_MEMCHECK)
    message(STATUS "cuda-memcheck is enabled")
    set(CMAKE_BUILD_TYPE Debug)
    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -G -O0")
else()
    message(STATUS "cuda-memcheck is disabled")
endif()

if(USE_FP64)
    message(STATUS "FP64 is enabled")
    add_definitions(-Dfp64)
else()
    message(STATUS "FP64 is disabled")
endif()

find_package(CUDAToolkit REQUIRED)
find_package(OpenMP REQUIRED)

if(CUDAToolkit_FOUND)
    message(STATUS "CUDA found: ${CUDAToolkit_VERSION}")
    message(STATUS "cuSPARSE available via CUDAToolkit")
else()
    message(FATAL_ERROR "CUDA or cuSPARSE not found!")
endif()

include_directories(${PROJECT_SOURCE_DIR}/include)

file(GLOB_RECURSE cuda_sources "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cu")
message(STATUS "CUDA sources: ${cuda_sources}")
add_library(MatXtractlib STATIC ${cuda_sources})
target_link_libraries(MatXtractlib CUDA::cusparse CUDA::cudart)

set(CUDA_UTILITIES_PATH ${CMAKE_CURRENT_SOURCE_DIR}/utilities)
file(GLOB cuda_utilities "${CUDA_UTILITIES_PATH}/*.cpp")
add_library(cuda_utilities_lib STATIC ${cuda_utilities})
target_compile_options(cuda_utilities_lib PRIVATE /Zc:preprocessor)
target_compile_features(cuda_utilities_lib PRIVATE cxx_std_17)
target_link_libraries(cuda_utilities_lib CUDA::cusparse)

set(CUDA_TEST_PATH ${CMAKE_CURRENT_SOURCE_DIR}/test)
file(GLOB CUDA_TEST_FILES "${CUDA_TEST_PATH}/test_cdspmv.cpp")
file(GLOB CUDA_TCTEST_FILES "${CUDA_TEST_PATH}/test_autotc_spmv.cpp")
message(STATUS "CUDA_TEST_FILES: ${CUDA_TEST_FILES}")

if(CUDA_TEST_FILES)
    add_executable(cuda_perftest ${CUDA_TEST_FILES})
    target_link_libraries(cuda_perftest MatXtractlib cuda_utilities_lib)
    target_compile_options(cuda_perftest PRIVATE /Zc:preprocessor)
    target_compile_features(cuda_perftest PRIVATE cxx_std_17)
    target_include_directories(cuda_perftest PRIVATE ${PROJECT_SOURCE_DIR}/include)

    add_executable(matxtract_perftest ${CUDA_TCTEST_FILES})
    target_link_libraries(matxtract_perftest MatXtractlib cuda_utilities_lib OpenMP::OpenMP_CXX)
    target_compile_options(matxtract_perftest PRIVATE /Zc:preprocessor)
    target_compile_features(matxtract_perftest PRIVATE cxx_std_17)
    target_include_directories(matxtract_perftest PRIVATE ${PROJECT_SOURCE_DIR}/include)
else()
    message(FATAL_ERROR "No test files found!")
endif()

set(ML_PATH ${CMAKE_CURRENT_SOURCE_DIR}/ML)
file(GLOB ML_SOURCES "${ML_PATH}/extract_features.cpp")
add_executable(extract_features ${ML_SOURCES})
target_compile_options(extract_features PRIVATE /Zc:preprocessor)
target_compile_features(extract_features PRIVATE cxx_std_17)
target_include_directories(extract_features PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(extract_features cuda_utilities_lib MatXtractlib)
